k8s/components/dashboard-ingress-kubernetes.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: 0m
  name: dashboard
  namespace: kubernetes-dashboard
spec:
  rules:
  - host: dashboard.apps.kubernetes.local
    http:
      paths:
      - backend:
          serviceName: kubernetes-dashboard
          servicePort: 80
        path: /
